# concord-kafka

./: CMakeLists.txt  generate_words.rb
src/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaSource.cpp  KafkaSource.h  main.cpp
